fixed text alignment

--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,7 +1,8 @@
 .About{
-    color:aliceblue;
+    height: auto;
 }
 .about-club {
+    color:rgb(21, 134, 233);
     padding: 3% 0%;
     margin: 0 10%;
 }
@@ -19,12 +20,13 @@
 }
 
 .meet-team-heading {
-    margin-left: 10%;
+    margin-left: 35%;
     text-align: center;
     font-size: 40px;
     font-weight: 500;
     border-bottom: 3px solid black;
     width: 300px;
+    color: lightgreen;
 }
 
 .teams {
@@ -32,13 +34,95 @@
     
 }
 
-.team {
+.team-member-descr {
+    font-size: xx-large;
     text-align: center;
     margin-bottom: 10%;
     margin-right: 4%;
     width: 28.8%;
     box-shadow: 2px 2px 10px 0px grey;
     display: inline-block;
+}
+
+.blue-container1 {
+    background-color: rgb(26, 134, 228);
+    padding: 3% 0%;
+    
+    margin: 0 40%;
+    width: 700px;
+    height: 250px;
+    margin-bottom: 5%;
+    border-radius: 999px 0 0 999px;
+}
+
+.blue-container2 {
+    background-color: rgb(26, 134, 228);
+    text-align: center;
+    padding: 3% 0%;
+    margin: 0 10%;
+    width: 700px;
+    height: 250px;
+    margin-bottom: 5%;
+    border-radius: 0 999px 999px 0;
+}
+
+.blue-container3 {
+    background-color: rgb(26, 134, 228);
+    text-align: center;
+    padding: 3% 0%;
+    margin: 0 40%;
+    width: 700px;
+    height: 250px;
+    margin-bottom: 5%;
+    border-radius: 999px 0 0 999px;
+}
+
+.blue-container4 {
+    background-color: rgb(26, 134, 228);
+    text-align: center;
+    padding: 3% 0%;
+    margin: 0 10%;
+    width: 700px;
+    height: 250px;
+    margin-bottom: 5%;
+    border-radius: 0 999px 999px 0;
+}
+
+.blue-container5 {
+    background-color: rgb(26, 134, 228);
+    text-align: center;
+    padding: 3% 0%;
+    margin: 0 40%;
+    width: 700px;
+    height: 250px;
+    margin-bottom: 5%;
+    border-radius: 999px 0 0 999px;
+}
+
+.blue-container6 {
+    background-color: rgb(26, 134, 228);
+    padding: 3% 5%;
+    margin: 0 10%;
+    width: 700px;
+    text-align: center;
+    height: 250px;
+    margin-bottom: 5%;
+    border-radius: 0 999px 999px 0;
+}
+
+.blue-container7 {
+    background-color: rgb(26, 134, 228);
+    padding: 3% 5%;
+    text-align: center;
+    margin: 0 40%;
+    width: 700px;
+    height: 250px;
+    margin-bottom: 5%;
+    border-radius: 999px 0 0 999px;
+}
+
+.team {
+    border-radius: 50%;
 }
 
 .icon {
@@ -58,8 +142,50 @@
     color: blue;
 }
 .team-member-img{
-    height: 220px;
-    width: 350px;
+    border-radius: 50%;
+    height: 40%;
+    width: 30%;
+}
+.team-member-name {
+    bottom: 270px;
+    left: 30%;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.team-member-pos{
+    bottom: 270px;
+    left: 30%;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    position: relative;
+}
+.role0{
+    bottom: 30px;
+    left: 40%;
+    font-size: 40px;
+    font-weight: 900;
+    margin-bottom: 10px;
+    position: relative;
+}
+.name0{
+    bottom: 20px;
+    left: 40%;
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 10px;
+    position: relative;
+}
+.dep0 {
+    top: 30px;
+    left: 23%;
+    font-size: 20px;
+    font-weight: 300;
+    margin-bottom: 10px;
+    position: relative;
 }
 
 @media only screen and (max-width: 600px) {
